--- a/partials/_sidebar.html
+++ b/partials/_sidebar.html
@@ -14,7 +14,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html">
+            <a class="nav-link" href="../../index.html">
               <span class="menu-title">Dashboard</span>
               <i class="mdi mdi-home menu-icon"></i>
             </a>
@@ -72,15 +72,15 @@
               </ul>
               </div>
           </li>
-          <li class="nav-item sidebar-actions">
+          <!--li class="nav-item sidebar-actions">
             <span class="nav-link">
               <div class="border-bottom">
-                <h6 class="font-weight-normal mb-3">Projects</h6>                
+                <h6 class="font-weight-normal mb-3">Projects</h6>
               </div>
               <button class="btn btn-block btn-lg btn-gradient-primary mt-4">+ Add a project</button>
               <div class="mt-4">
                 <div class="border-bottom">
-                  <p class="text-secondary">Categories</p>                  
+                  <p class="text-secondary">Categories</p>
                 </div>
                 <ul class="gradient-bullet-list mt-4">
                   <li>Free</li>
@@ -88,6 +88,6 @@
                 </ul>
               </div>
             </span>
-          </li>
+          </li-->
         </ul>
       </nav>
