--- a/css/style.css
+++ b/css/style.css
@@ -18818,9 +18818,7 @@ input:focus {
 }
 
 .navbar.default-layout-navbar .navbar-brand-wrapper .navbar-brand img {
-  width: calc(260px - 120px);
-  max-width: 100%;
-  height: 28px;
+  height: 3.5rem;
   margin: auto;
   vertical-align: middle;
 }
